test/libsolidity/syntaxTests/visibility/interface/function_internal.sol
interface I {
	function f() internal;
}
// ----
// TypeError: (15-37): Functions in interfaces cannot be internal or private.
